# NovaMind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_PPT_实现计划.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deploy.ps1  deploy.sh  docker-compose.yml  hermes-prompts-collection.md  test.py  项目结构导航.md
backend/: .dockerignore  .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini  unused_code_report.md
backend/docker/: .env.example  Dockerfile  README.md  docker-compose.yml  docker.example
backend/docs/: agent_framework.md  elasticsearch-index-structure.md  elasticsearch_document_structure.md  es-index-fields.md  knowledge-space-architecture.md
backend/docs/api/: agent_api.md  deep_research_api.md  (+6 more)
backend/novamind/: __init__.py
backend/scripts/: migrate_remove_system_configs.py
backend/sql/: 2026-07-08_add_document_task_batches.sql
backend/test/: test_set.csv
backend/tests/: conftest.py  test_ai_chat_db.py  test_asr_executor_isolation.py  test_asr_local_model_path.py  test_dashscope_asr.py  test_dashscope_fileid.py  test_deep_research_api.py  test_deepdoc_cli.py  test_deepdoc_entrypoint.py  test_deepdoc_imports.py  test_deepdoc_installed_cli.py  test_deepdoc_integration_light.py  test_deepdoc_packaging.py  test_deepdoc_reading_order.py  test_deepdoc_runtime.py  test_deepdoc_serve_smoke.py  test_deepdoc_strip_position_tags.py  test_deepdoc_upstream_mapping.py  test_document_doc_normalization.py  test_document_enqueue_batch_atomic.py  test_document_ownership_guard.py  test_document_retry_reuses_pipeline_config.py  test_document_task_batch_repository.py  test_document_task_retry_count.py  test_document_upload_dedup.py  test_evaluation_api.py  test_execute_pipeline_video_branch.py  test_knowledge_base_service_config.py  test_knowledge_config_runtime.py  test_knowledge_reorg_compat.py  test_knowledge_space_api.py  test_media_utils.py  test_parsed_text_storage.py  test_qa_api.py  test_rag_pipeline.py  test_search_cache_key_and_sanitize.py  test_user_api.py  test_vlm_quota_degradation.py
(+900 files in other folders)
